gcc/testsuite/g++.dg/warn/pedantic2.C
// { dg-options "-pedantic" }

class foo
{
  foo() {};      // { dg-error "extra" }
};
